--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BlockArray.cs" />
+    <Compile Include="DirectionController2.cs" />
     <Compile Include="Examples\Class1.cs" />
     <Compile Include="Examples\GravDrive3.cs" />
     <Compile Include="Examples\TmpAngularVelocity.cs" />
