--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -71,6 +71,7 @@
     <Compile Include="Examples\Class1.cs" />
     <Compile Include="Examples\IcbmExample.cs" />
     <Compile Include="Examples\GravDrive3.cs" />
+    <Compile Include="Examples\Spotter.cs" />
     <Compile Include="Icbm.cs" />
     <Compile Include="Examples\TmpAngularVelocity.cs" />
     <Compile Include="Examples\TmpGravDrive.cs" />
