--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="RotorTurret.cs" />
+    <Compile Include="RuntimeTracker.cs" />
     <Compile Include="Transmitter.cs" />
     <Compile Include="BlockArray.cs" />
     <Compile Include="DirectionController2.cs" />
