--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -83,6 +83,7 @@
   <ItemGroup>
     <Compile Include="RotorTurret.cs" />
     <Compile Include="RuntimeTracker.cs" />
+    <Compile Include="Scripts\Debug.cs" />
     <Compile Include="Scripts\Draft.cs" />
     <Compile Include="Scripts\BattleCruiser.cs" />
     <Compile Include="Transmitter.cs" />
