--- a/Builder/Builder.csproj
+++ b/Builder/Builder.csproj
@@ -56,8 +56,10 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Dist\BattleCruiser.cs.txt" />
+    <Content Include="Dist\GravDriveBalancing.cs.txt" />
     <Content Include="Dist\IcbmLauncher.cs.txt" />
     <Content Include="Dist\Program.cs.txt" />
+    <Content Include="Dist\RotorTest.cs.txt" />
     <Content Include="Dist\Spotter.cs.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
