--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -85,6 +85,7 @@
     <Compile Include="RuntimeTracker.cs" />
     <Compile Include="Scripts\Debug\GravDriveBalancing.cs" />
     <Compile Include="Scripts\Debug\RotorTest.cs" />
+    <Compile Include="Scripts\TowShip.cs" />
     <Compile Include="Scripts\Draft.cs" />
     <Compile Include="Scripts\BattleCruiser.cs" />
     <Compile Include="Serializer.cs" />
