--- a/Builder/Builder.csproj
+++ b/Builder/Builder.csproj
@@ -56,6 +56,7 @@
   <ItemGroup />
   <ItemGroup>
     <Content Include="Dist\BattleCruiser.cs.txt" />
+    <Content Include="Dist\Fighter.cs.txt" />
     <Content Include="Dist\Printer.cs.txt" />
     <Content Include="Dist\RotorTest.cs.txt" />
     <Content Include="Dist\Spotter.cs.txt" />
