--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -87,6 +87,7 @@
     <Compile Include="RotorTurret.cs" />
     <Compile Include="RuntimeTracker.cs" />
     <Compile Include="Scripts\Debug\GravDriveBalancing.cs" />
+    <Compile Include="Scripts\Debug\NukeTest.cs" />
     <Compile Include="Scripts\Debug\RotorTest.cs" />
     <Compile Include="Scripts\Fighter.cs" />
     <Compile Include="Scripts\Printer.cs" />
