--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -93,7 +93,7 @@
     <Compile Include="Scripts\Printer.cs" />
     <Compile Include="Scripts\AimBot.cs" />
     <Compile Include="Scripts\Fortress.cs" />
-    <Compile Include="Lib\Torpedos\BaseTorpedos.cs" />
+    <Compile Include="Lib\Torpedos\BaseTorpedo.cs" />
     <Compile Include="Scripts\TowShip.cs" />
     <Compile Include="Scripts\Draft.cs" />
     <Compile Include="Scripts\BattleCruiser.cs" />
