--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -33,22 +33,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Sandbox.Common">
-      <HintPath>..\..\SEDebug\Debug\Sandbox.Common.dll</HintPath>
+      <HintPath>D:\Games\steamapps\common\SpaceEngineers\Bin64\Sandbox.Common.dll</HintPath>
     </Reference>
     <Reference Include="Sandbox.Game">
-      <HintPath>..\..\SEDebug\Debug\Sandbox.Game.dll</HintPath>
-    </Reference>
-    <Reference Include="Sandbox.Game.XmlSerializers">
-      <HintPath>..\..\SEDebug\Debug\Sandbox.Game.XmlSerializers.dll</HintPath>
+      <HintPath>D:\Games\steamapps\common\SpaceEngineers\Bin64\Sandbox.Game.dll</HintPath>
     </Reference>
     <Reference Include="SpaceEngineers.Game">
-      <HintPath>..\..\SEDebug\Debug\SpaceEngineers.Game.dll</HintPath>
+      <HintPath>D:\Games\steamapps\common\SpaceEngineers\Bin64\SpaceEngineers.Game.dll</HintPath>
     </Reference>
     <Reference Include="SpaceEngineers.ObjectBuilders">
-      <HintPath>..\..\SEDebug\Debug\SpaceEngineers.ObjectBuilders.dll</HintPath>
-    </Reference>
-    <Reference Include="SpaceEngineers.ObjectBuilders.XmlSerializers">
-      <HintPath>..\..\SEDebug\Debug\SpaceEngineers.ObjectBuilders.XmlSerializers.dll</HintPath>
+      <HintPath>D:\Games\steamapps\common\SpaceEngineers\Bin64\SpaceEngineers.ObjectBuilders.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -59,22 +53,16 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="VRage">
-      <HintPath>..\..\SEDebug\Debug\VRage.dll</HintPath>
+      <HintPath>D:\Games\steamapps\common\SpaceEngineers\Bin64\VRage.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Game">
-      <HintPath>..\..\SEDebug\Debug\VRage.Game.dll</HintPath>
-    </Reference>
-    <Reference Include="VRage.Game.XmlSerializers">
-      <HintPath>..\..\SEDebug\Debug\VRage.Game.XmlSerializers.dll</HintPath>
-    </Reference>
-    <Reference Include="VRage.Input">
-      <HintPath>..\..\SEDebug\Debug\VRage.Input.dll</HintPath>
+      <HintPath>D:\Games\steamapps\common\SpaceEngineers\Bin64\VRage.Game.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Library">
-      <HintPath>..\..\SEDebug\Debug\VRage.Library.dll</HintPath>
+      <HintPath>D:\Games\steamapps\common\SpaceEngineers\Bin64\VRage.Library.dll</HintPath>
     </Reference>
     <Reference Include="VRage.Math">
-      <HintPath>..\..\SEDebug\Debug\VRage.Math.dll</HintPath>
+      <HintPath>D:\Games\steamapps\common\SpaceEngineers\Bin64\VRage.Math.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
