--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -66,6 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Examples\JumpDriveStatus.cs" />
     <Compile Include="Lib\Grid.cs" />
     <Compile Include="Lib\TargetTracker2.cs" />
     <Compile Include="Lib\Torpedos\SpaceTorpedo.cs" />
