--- a/Builder/Builder.csproj
+++ b/Builder/Builder.csproj
@@ -57,6 +57,7 @@
   <ItemGroup>
     <Content Include="Dist\BattleShip.cs.txt" />
     <Content Include="Dist\Fortress.cs.txt" />
+    <Content Include="Dist\Kamikaze.cs.txt" />
     <Content Include="Dist\Printer.cs.txt" />
     <Content Include="Dist\RotorTest.cs.txt" />
     <Content Include="Dist\Spotter.cs.txt" />
