--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Scripts\Debug\NukeTest.cs" />
     <Compile Include="Scripts\Debug\RotorTest.cs" />
     <Compile Include="Scripts\BattleShip.cs" />
+    <Compile Include="Scripts\Kamikaze.cs" />
     <Compile Include="Scripts\Printer.cs" />
     <Compile Include="Scripts\Fortress.cs" />
     <Compile Include="Lib\Torpedos\BaseTorpedo.cs" />
