вынес управление гироскопами из гравидвигателя

--- a/SpaceEngineers/SpaceEngineers.csproj
+++ b/SpaceEngineers/SpaceEngineers.csproj
@@ -68,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Examples\LCDExample.cs" />
     <Compile Include="Examples\JumpDriveStatus.cs" />
+    <Compile Include="Lib\ShipDirectionController.cs" />
     <Compile Include="Lib\Aimbot.cs" />
     <Compile Include="Lib\Grid.cs" />
     <Compile Include="Lib\LocalTime.cs" />
